--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class='bx bxs-moon' id="darkMood"></div>
             <div class="bx bxs-sun" id="lightMood"></div>
           <li>
-            <a target="_blank" class="header__resume btn" href="https://docs.google.com/document/d/1m3brASLrqX9PH1tMPPhcFJUK8qFwSAe0uWC6C98zv6k/edit">
+            <a target="_blank" class="header__resume btn" href="https://docs.google.com/document/d/1S5_T9paJw4kz3nr1Jdnrys44vrpTi9C2DWDCInH7DlQ/edit?usp=sharing">
               Resume</a>
           </li>
         </ul>     
@@ -61,7 +61,7 @@
               <!-- <div class='bx bxs-moon' id="darkMood"></div>
               <div class="bx bxs-sun" id="lightMood"></div> -->
               <li> 
-                <a target="_blank" class="mobile__NavBar-Resume btn" href="">
+                <a target="_blank" class="mobile__NavBar-Resume btn" href="https://docs.google.com/document/d/1S5_T9paJw4kz3nr1Jdnrys44vrpTi9C2DWDCInH7DlQ/edit?usp=sharing">
                   Resume</a>
               </li>
             </ul>
